Fri Apr 14 17:22:04 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added quickstart guide to documentation.

	* Declare this to be Version 0.1.2

Thu Apr 13 11:05:31 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Document data storage implementation done.  Sleepydatabase now
	  functions for simple retrieval: missing is general database
	  statistics (eg, get_doccount() always returns 1), and storage of
	  keys.

Thu Apr 13 01:37:41 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added SleepyDocument class, to store keys and document data.
	  Implementation not yet done.

Wed Apr 12 19:31:21 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* API change - added a termfreq member to OmDocumentTerm.

	* SleepyDatabase now adds entries to postlists and termlists.  Doesn't
	  yet store documents, or correct already existing wdfs in termlists.

Wed Apr 12 17:36:58 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added internal test to check that SleepyList packs and unpacks
	  correctly.

Wed Apr 12 16:22:39 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* libomus-config now gives flags required to link with dependent
	  libraries (as determined by libtool).

Wed Apr 12 15:50:41 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* add_document methods now all return a om_docid value (rather than
	  void)

Wed Apr 12 15:49:17 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* MultiMatch now takes an optional StatsGatherer argument to
	  its constructor.

Wed Apr 12 14:03:52 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* IRDatabase now inherits from OmRefCntBase: we have multiple
	  inheritance!  This means that we can now have refernce counted
	  access to databases from the API.

	* OmWritableDatabase is now implemented in the API, opens the
	  database, and is well defined.  add_document() is the only method