@@ -27,34 +27,56 @@
 #include "om/omtypes.h"
 
 class SleepyDatabase;
+class SleepyDatabaseInternals;
 class SleepyDatabaseTermCache;
+#include "sleepy_list.h"
 
 /** A termlist in a sleepycat database.
  */
 class SleepyTermList : public LeafTermList {
     friend class SleepyDatabase;
     private:
-	om_termcount pos;
-	om_termid *data;
-	om_termcount terms;
-	om_doccount dbsize;
+	/** List object which deals with the low-level list accessing
+	 *  and unpacking.
+	 */
+	SleepyList mylist;
 
+	/** Database internals object.
+	 */
+	const SleepyDatabase * database;
+	
+	/** Object to do name to ID mapping.
+	 */
 	const SleepyDatabaseTermCache *termcache;
 
-	SleepyTermList(const SleepyDatabaseTermCache *tc_new,
-		       om_termid *data_new,
-		       om_termcount terms_new,
-		       om_doccount dbsize_new);
+	/** Number of documents in the database.
+	 */
+	om_doccount db_size;
+
+
+	/** Create a SleepyPostList from the specified internals and
+	 *  term cache, using the specified document ID.
+	 *
+	 *  @param did_        The document ID whose posting list we open.
+	 *  @param database_   The database to use.
+	 *  @param internals_  The database internals to use.
+	 *  @param termcache_  The term name to ID translator.
+	 */
+	SleepyTermList(om_docid did_,
+		       const SleepyDatabase * database_,
+		       const SleepyDatabaseInternals * internals_,
+		       const SleepyDatabaseTermCache *termcache_);
     public:
 	~SleepyTermList();
+
 	om_termcount get_approx_size() const;
 
-	OmExpandBits get_weighting() const;  // Gets weight of current term
+	OmExpandBits      get_weighting() const;  // Gets weight of current term
 	const om_termname get_termname() const;  // Current term
-	om_termcount get_wdf() const;  // Occurences of current term in doc
-	om_doccount get_termfreq() const;  // Docs indexed by current term
-	TermList * next();
-	bool   at_end() const;
+	om_termcount      get_wdf() const;  // Occurences of current term in doc
+	om_doccount       get_termfreq() const;  // Docs indexed by current term
+	TermList *        next();
+	bool              at_end() const;
 };
 
 #endif /* OM_HGUARD_SLEEPY_TERMLIST_H */
