@@ -1,3 +1,7 @@
+Mon Apr 17 17:48:48 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* Implemented sleepycat termlists.
+
 Fri Apr 14 17:22:04 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Added quickstart guide to documentation.
